terraform-awschina/fgtvm-gwlb-with-fwb/4.1.aws_internet_gateway.tf
resource "aws_internet_gateway" "vpcNgfwIgw" {
  count = var.enableNewVpcNgfw == true ? 1 : 0

  vpc_id = aws_vpc.vpcNgfw[0].id

  tags = {
    Name      = "vpc-ngfw-igw"
    Terraform = true
    Project   = var.ProjectName
  }
}
